Fix Gallery Link to H1 was being covered by the nev bar

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -309,8 +309,9 @@ button:hover {
 }
 
 .gallery-allignment h1 {
-    height: 50px;
-    padding-top: 5%;
+    height: 10%;
+    padding-top: 3%;
+    padding-bottom: 1.5%;
     text-align: center;
 }
 
